--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
         <div class="container">
             <center>
                 <div class="row">
-                    <textarea class="form-control" id="text">Hey! Well guess what, I can talk</textarea>
+                    <textarea class="form-control" id="text">Hey! Well guess what. I can talk</textarea>
                 </div>
                 <div class="row second">
-                    <label for="speed">Speed</label>
-                    <input class="form-control" type="number" id="speed" min=".5" max="3" step=".5" value="1">
+                    <div class="speed">
+                        <label for="speed">Speed</label>
+                        <input class="form-control" type="number" id="speed" min=".5" max="3" step=".5" value="1">
+                    </div>
                     <i class="material-icons" id="play-button" title="play">play_circle_filled</i>
                     <i class="material-icons" id="pause-button" title="pause">pause_circle_filled</i>
                     <i class="material-icons" id="stop-button" title="stop">stop</i>
                 </div>
-
+                <a href="https://github.com/Madhubalajb/I-can-talk" target="_blank"><i class="fab fa-github"></i></a>
             </center>
         </div>
     </body>
