--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <i class="material-icons" id="pause-button" title="pause">pause_circle_filled</i>
                     <i class="material-icons" id="stop-button" title="stop">stop</i>
                 </div>
-                <a href="https://github.com/Madhubalajb/I-can-talk" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Madhubalajb/I-can-talk" target="_blank" title="code"><i class="fab fa-github"></i></a>
             </center>
         </div>
     </body>
