--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                     <i class="material-icons" id="pause-button" title="pause">pause_circle_filled</i>
                     <i class="material-icons" id="stop-button" title="stop">stop</i>
                 </div>
-                <a href="https://github.com/Madhubalajb/I-can-talk" target="_blank" title="code"><i class="fab fa-github"></i></a>
+                <div class="footer">
+                    <a class="fab fa-github" href="https://github.com/Madhubalajb/I-can-talk" rel="noopener noreferrer" target="_blank"></a>
+                    built by <a href="https://madhubalajb.github.io/" rel="noopener noreferrer" target="_blank">madhubala jayakumaran</a>
+                </div>
             </center>
         </div>
     </body>
