--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>I can talk</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="shortcut icon" href="mic.png" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">  
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
